# old-rusty-app

./: README.md  package-lock.json  package.json
src/: htmx-tauri.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: fhir_fetch.py  main.rs  network_scanner.py
