[package]
name = "htmx-rust"
version = "0.0.1"
description = "The minimalist safety first tech stack"
authors = ["Davey Mason"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["window-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.13"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
